fix mobile about anchor link spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,4 +160,9 @@ footer p {
         padding-top: 525px;
         margin-top: -525px;
     }
+
+    #about {
+        padding-top: 300px;
+        margin-top: -300px;
+    }
 }
